examples/test/testpolicy4872.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4872
  namespace: namespace89
spec:
  podSelector:
    matchLabels:
      key22: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value34
      podSelector:
        matchLabels:
          key25: value47
          key10: value0
          key7: value41
